test/expressions/noinit/tupleWithClass.good
tupleWithClass.chpl:11: error: noinit is only supported for arrays
